--- a/3_parallax website/style.css
+++ b/3_parallax website/style.css
@@ -9,7 +9,7 @@ body {
   color: #666;
 }
 .pimg1 {
-  background-image: url();
+  background-image: url(images/image1.png);
   min-height: 100%;
 }
 .pimg2 {
